--- a/MyCV/main.html
+++ b/MyCV/main.html
@@ -21,7 +21,7 @@
     <div class="top-container">
       <div class="container">
         <h1 class="h1-text">Nguyen Thanh Long</h1>
-        <p class="lead">Yes, I'm program stuff.</p>
+        <p class="lead">I'm a lifelong learner.</p>
       </div>
       <div class="overlay"></div>
       <a href="#profile" class="scroll-down">
